feat(registration): manual registration with drag and drop
